--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
    <title>A Dasara Comparitive</title>
    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  
+   <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
    <link href='http://fonts.googleapis.com/css?family=Titillium+Web:400,300,600,700' rel='stylesheet' type='text/css'>
    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">   
    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-   <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+   
    <link rel="stylesheet" href="css/theme.css">
 </head>
 <body>
-<!--nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -24,14 +24,14 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#chapter1">Chapter One</a></li>
+            <li class=""><a href="#chapter1">Chapter One</a></li>
             <li><a href="#chapter2">Chapter Two</a></li>
             <li><a href="#chapter3">Chapter Three</a></li>
             <li><a href="#chapter4">Chapter Four</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
-      <!--/div>
+      </div>
     </nav>
  
  <div class="main container-fluid" style="padding-top:75px;">
@@ -50,51 +50,8 @@ A National festival of Unity and it's evolution in diversity.</p>
 	          	   <div class="button"><a class="fancybox-media" href="">Scroll Down!</a></div>          	
 	           </div>
 	         </div>
-	   </section-->
-<div class="site-wrapper">
+	   </section>
 
-      <div class="site-wrapper-inner">
-
-        <div class="cover-container">
-
-          <div class="masthead clearfix">
-            <div class="inner">
-              <h3 class="masthead-brand">Cover</h3>
-              <nav>
-                <ul class="nav masthead-nav">
-                  <li class="active"><a href="#chapter1">Chapter One</a></li>
-            <li><a href="#chapter2">Chapter Two</a></li>
-            <li><a href="#chapter3">Chapter Three</a></li>
-            <li><a href="#chapter4">Chapter Four</a></li>
-            <li><a href="#contact">Contact</a></li>
-                </ul>
-              </nav>
-            </div>
-          </div>
-
-          <div class="inner cover">
-            <h1 class="cover-heading">DASARA</h1>
-            <p class="lead">Festivals and celebrations have  an important role in the indian culture and it's heritage. Most indian festival have it's roots in religious disciplines incorporating  Social and cultural heritage.
-
-Dasara ritual is a forte of the followers of Shakthi or feminine or godess worship, as a symbol of the good prevailing over evil and hence the protection of all life.
-All over India, we can see the celebration of Dasara in it's  variations to proving the unity in diversity.
-A National festival of Unity and it's evolution in diversity.</p>
-            <p class="lead">
-              <a href="#intro" class="btn btn-lg btn-default">Scroll Down</a>
-            </p>
-          </div>
-
-          <div class="mastfoot">
-            <div class="inner">
-              <p>Cover template for <a href="http://getbootstrap.com">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
-            </div>
-          </div>
-
-        </div>
-
-      </div>
-
-    </div>
 
  <section class="chapter col-md-12 col-lg-12 col-xs-12 col-sm-12" id="chapter1">
 	 		 	<div class="wrap col-md-4 col-lg-4 col-xs-4 col-sm-4">
