--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
       </div>
 
       </section>
+      <section class="row mapRow"></section>
       <section class="chapter row" id="chapter2">
       <div class="wrap col-md-4 col-lg-4 col-xs-4 col-sm-4">
         <h2>VIJAYANAGARA DASARA</h2>
@@ -194,6 +195,7 @@
       </div>
       </section>
 
+      <section class="row mapRow"></section>
 
       <section class="chapter row" id="chapter4">
 
