--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    <link href='http://fonts.googleapis.com/css?family=Titillium+Web:400,300,600,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/bootstrap.min.css">   
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+    <link href='http://fonts.googleapis.com/css?family=Titillium+Web:400,300,600,700' rel='stylesheet' type='text/css'>
 
     <link rel="stylesheet" href="css/theme.css">
   </head>
@@ -42,13 +42,12 @@
         <p class="lead"> 
 
 
-
         Festivals and celebrations have  an important role in the indian culture and it's heritage. Most indian festival have it's roots in religious disciplines incorporating  Social and cultural heritage.
 
         Dasara ritual is a forte of the followers of Shakthi or feminine or godess worship, as a symbol of the good prevailing over evil and hence the protection of all life.
         All over India, we can see the celebration of Dasara in it's  variations to proving the unity in diversity.
         A National festival of Unity and it's evolution in diversity.</p>	
-        <div class="button"><a  class="btn btn-lg btn-default" href="">Scroll Down!</a></div>          	
+        <div class="button"><a  class="btn btn-lg btn-default" href="#chapter1">Scroll Down!</a></div>          	
       </div>
 
       </section>
@@ -57,7 +56,7 @@
       <section class="chapter row" id="chapter1">
       <div class="wrap col-md-offset-1 col-lg-offset-1 col-md-10 col-lg-10
         col-xs-10 col-sm-10">
-        <h2>Tradition & HISTORY</h2>
+        <h2>Tradition & History</h2>
         <h3></h3>
         <p> 
         Dasara is derived from Sanskrit, and literally means 10("Dasa") days("ahar"). So, this is a celebration of 10 days, and the 10th day is Dasara.
@@ -94,7 +93,7 @@
       </section>
       <section class="chapter row" id="chapter2">
       <div class="wrap col-md-4 col-lg-4 col-xs-4 col-sm-4">
-        <h2>HAMPI ROYAL DASARA</h2>
+        <h2>Hampi Royal Dasara</h2>
         <h3></h3>
         <p> 
         The Most significant history of Dasara is it's relation to the Vijayanagara Dynasty. The historians have detailed about the Vijayadashami tradition in this region, and we can see that though empires have fallen, but the rituals and traditions haven't died. These human ideas are exquisite human expressions, which has spread across the society, lived, propogated like a living organism, and still evolving in the modern day society.</p>
@@ -145,7 +144,7 @@
      
       <section class="chapter row" id="chapter3">
       <div class="wrap col-md-4 col-lg-4 col-xs-4 col-sm-4">
-        <h2>MYSOORU ROYAL DASARA</h2>
+        <h2>Mysooru Royal Dasara</h2>
         <h3></h3>
         <h3></h3>
         <p>The Divine Mother Durga would be worshiped on all these nine days of Navaratri in her different forms as believed in the Hindu tradition.
@@ -209,7 +208,7 @@
       <section class="chapter row" id="chapter4">
 
       <div class="wrap col-md-4 col-lg-4 col-xs-4 col-sm-4">
-        <h2>VILLAGE DASARA</h2>
+        <h2>Village Dasara</h2>
         <h3>Devaraguddada Dasara</h3>
         <p>Devaragudda is a holy place in North Karnatakas RaniBennur Taluk, and the Mailara temples in this region have a interesting way of celebrating Dasara.</p>
 
