Sweets container for narrative images +theme

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="css/theme.css">
-    <script type="text/javascript" src="//underscorejs.org/underscore-min.js"></script>
-    <script type="text/javascript" src="//backbonejs.org/backbone-min.js"></script>
+    <script type="text/javascript" src="http://underscorejs.org/underscore-min.js"></script>
+    <script type="text/javascript" src="http://backbonejs.org/backbone-min.js"></script>
   </head>
   <body>
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
@@ -120,6 +120,7 @@
           great majesty of the Dasara celebrations.</P>
 
 
+        <div id="33"></div>
 
           <p>Hazara Rama being the most important diety of the Royal family of
           Vijayanagara, we can see that the Temple was built attached close to
@@ -145,6 +146,7 @@
             people involving all hierarchies of the then living society was
             religiously involved with the celbrations and processions is
             documented by Foreign travellers travelogues around the world.</p>
+        <div id="32"></div>
 
           <p>Bharatesha Vaibhava, a great piece of Literature from
           RatnakaraVarni cites the Dasara celebration from the 14th-15th
@@ -190,11 +192,16 @@
         <h3></h3>
         <h3></h3>
         <p>The Divine Mother Durga would be worshiped on all these nine days of Navaratri in her different forms as believed in the Hindu tradition.
+        On the first day, the King, after having a ceremonial bath, would
+        perform purificatory rites. He would then worship his family deity,
+        Goddess Chamundi, and would wear the ceremonial, sacred wrist - band
+        which signified his intention to perform the sacred rituals with
+        devotion and dedication.</p> 
+        <div id="30"></div>
+        
+        <p> He would then enter the durbar with the accompaniment of sacred chants and music. The tradition of the durbar, an adoption from the Mugal emperors, was first introduced by Mummadi[lit. The Third] Krishnaraja Wadiyar, and it is an assembly of the royal court, attended by the invitees, chief citizens, members of the royal family, palace officials, royal priests, and the intelligentsia.
 
-        On the first day, the King, after having a ceremonial bath, would perform purificatory rites. He would then worship his family deity, Goddess Chamundi, and would wear the ceremonial, sacred wrist - band which signified his intention to perform the sacred rituals with devotion and dedication. He would then enter the durbar with the accompaniment of sacred chants and music. The tradition of the durbar, an adoption from the Mugal emperors, was first introduced by Mummadi[lit. The Third] Krishnaraja Wadiyar, and it is an assembly of the royal court, attended by the invitees, chief citizens, members of the royal family, palace officials, royal priests, and the intelligentsia.
 
-
-          <div id="29"></div>
 
         He would also worship the throne as per the ancient injunctions. He would then circumambulate the throne thrice and ascend it at an auspicious moment. Later royal insignia and sword were presented to him amid prayers to the Goddess. At that moment all the lights in the palace would come alive, and there would be the royal 21- gun salute.</p>
 
@@ -206,7 +213,6 @@
 
         <p>The beautifully decorated royal elephant would arrive showering roses on the assembled guests; and the royal horse, equally well - decorated, would bend down on its knees in salutation to the throne. The assembly would leave the court after bowing down to the king once again and the queen, accompanied by the other royal ladies, would come to pay obeisance to the king who would share the offerings received from the temples with them. The queen mother and the other senior ladies would bless him good health. The king would then leave the durbar hall and partake of the noon meal with the royal guests, after praying to the Goddess once again.</p>
 
-            <div id="30"></div>
 
 
         <p>The same procedure would be followed on all the Navaratri evenings with the addition of acrobatic feats, wrestling bouts by champions, fireworks display and other entertainment’s, watched by the teeming masses everyday. While the durbar would be held in the outer court the worship would be done within the palace. The king would worship Goddess Sarasvati on the seventh day and Mahisasuramardini on the eighth. On the mahanavami day, the royal sword would be worshiped ceremoniously, signifying the worship of all the weapons and would be taken out in procession accompanied by the army, elephants, horses, camels and the royal retinue.
@@ -214,11 +220,11 @@
         The assembly rooms of the palace and the royal insignia would also be worshiped.</p>
 
         <h2> Banni Pooje </h2>
+          <div id="31"></div>
         <h3></h3>
 
         <p>After a mile - long walk, the procession would reach the Bannimantap site, where the king, after a bath, would worship the sami (orbanni in Kannada) tree. Worshiping this tree before embarking on any war adventure was customary for kings of this dynasty. The Wadiyar king would return to his palace after viewing the wonderful torchlight parade and the grand fireworks display at Bannimantap. That would conclude the Vijayadasami festivities.</p>
 
-          <div id="31"></div>
 
             <h2> Jambu Savari </h2>
           <p>The Navaratri celebrations would reach their culmination with the
@@ -231,6 +237,7 @@
             procession, seated on the historically famous golden howdah bedecked
             with the rarest gems and pearls, which was carried by the royal
             elephant.
+          <div id="29" ></div>
 
             The next day, after the Goddess Camundesvari would be worshiped with
             great devotion, the king would honor distinguished personalities by
@@ -266,12 +273,22 @@
         <h3>Devaraguddada Dasara</h3>
         <p>Devaragudda is a holy place in North Karnatakas RaniBennur Taluk, and the Mailara temples in this region have a interesting way of celebrating Dasara.</p>
 
-        <p>The beginning is marked by the first day on which the entire community visits the temples, the dieties from the temple are taken out on a procession along with the Bows and arrows and other tools of war and utility.during this processions there is a lot of folk performances of Music, dance and other street shows. Another unique part of the celebrations is that the local muslim community also participates in the celebrations and rituals with same dedication and fervor.These rituals will be held every day of Dasara.</p>
+        
+<p>Common people’s Dassara used to start two days prior to Royal Dassara. The King along with his family used to participate in the common people’s dassara. This dassara was celebrated towards the west from the kingdom at a distance of 5-6 forlong as recorded in Nunij’s travelogue. This has been verified, common people’s dassara was celebrated in Gudi hobbalapura which is located on the bank of Tungabhadra river which is located to the west of Mahanavami Dibba, Hampi. This dassara is still alive in these regions.</p>
+<div id="35" ></div>
+
+<p>Present day Dharamaragudda or Kallaghata (Devaramala) still observes common people’s dassara. This dassara brings the villagers from surrounding regions of Hampi. Pastoralists and farmers can be seen participating along with their deities. </p>
+
+<p>The first day of vijayadashami, people assemble by the bank of the river Tungabhadra at Devaramala. From here they take the deities to have a dip in the holy water and then wrap the deities in new clothes. The deities are then carried to Banni tree. This tree is called “Devara banni”. People take the leaves of this tree and they distribute it in their village. This ritual spreads the message of equality. In accordance with this ritual a complete 9 days of programme has been documented.</p>
+ <div id="34" ></div>
+
+<p>The dieties from the temple are taken out on a procession along with the Bows and arrows and other tools of war and utility. During this processions there is a lot of folk performances of Music, dance and other street shows. Another unique part of the celebrations is that the local muslim community also participates in the celebrations and rituals with same dedication and fervor.These rituals will be held every day of Dasara.</p>
 
 
-        <p>Day 8 - Astami: Golaka pooje is the ritual prominent on day 8, A saint walks the village with a container for the common people to contribute and submit their offerings to God.</p>
 
-        <p>Day 9 - Mahanavami: Ayudha Pooja - Early morning all the tools and utility will be offered respect
+<p>Surrounding Hampi, in the left bank of Tungabhadra there is another major deity, called Durgamma temple which is located in Anne Gundi. Here also dassara festival of common people is followed.</p>
+
+
 
 
       </section>
