--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>A Dasara Comparitive</title>
+    <title>A Dasara Comparative</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
@@ -44,11 +44,9 @@
       <section class=" jumbotron row" id="intro">
         <div class=" col-md-8 col-lg-8 col-xs-8 col-sm-8">
           <p class="lead">
-
-
             Festivals and celebrations have an important role in the indian
             culture and it's heritage. Most indian festival have it's roots in
-            religious disciplines incorporating social and cultural heritage.
+            religious disciplines imprinting social and cultural heritage.
 
             Dasara ritual is a forte of the followers of Shakthi or feminine or
             godess worship, as a symbol of the good prevailing over evil and
@@ -56,7 +54,9 @@
             celebration of Dasara in it's variations to proving the unity in
             diversity.  A national festival of unity and it's evolution in
             diversity.</p>
-          <div class="button"><a  class="btn btn-lg btn-default" href="#chapter1">Scroll Down!</a></div>
+          <div class="button">
+            <a  class="btn btn-lg btn-default" href="#chapter1">Scroll Down!</a>
+          </div>
         </div>
 
       </section>
@@ -174,7 +174,7 @@
         <div id="33"></div>
 
           <p>Hazara Rama being the most important diety of the Royal family of
-            Vijayanagara, we can see that the Temple was built attached close to
+            Vijayanagara, we can see that the temple was built attached close to
             the palace complex. This temple also has beautifully designed
             sculptures of Bhagawata, Mahabharata and Ramayana stories.
 
@@ -182,7 +182,7 @@
 
             The outer walls of the temple, meaning the walls to east, north and
             west, have sculptures of elephant rows, horse rows, camel rows,
-            army Knight team, army bishop team, army rooke team, swords and
+            army knight team, army bishop team, army rooke team, swords and
             other short range weapons team, and long range weapons team like
             the bows and arrows and other depictions of the then defence
             system.
