--- a/index.html
+++ b/index.html
@@ -447,9 +447,27 @@
 
 <section class="chapter row" id="contact">
   <h2>Contact</h2>
+<hr style="width:400px;"/>
+<p><strong>Dr Chaluvaraju</strong><br />
+
+<strong>Associate Professor</strong><br />
+
+Dept of Tribal studies, 
+
+Kannada University, Hampi.<br />
+
+Mobile Number: +91 9480353091<br />
+
+Email: chaluvaraju.hampi@gmail.com <br />
+
+Website:<a href="http://chaha.in/"> Chaluvaraju's Hampi Website</p>
 </section>
 </div>
-
+<div class="footer">
+<div class=container>
+&#0169 Copyright 2014
+</div>
+</div>
 
 <script type="text/template" id="story-image-template">
   <div class="row">
