--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
     <!-- <div class="hidden col-md-3" for=<%= id %>> -->
     <div class="snipit col-md-12 pull-left">
       <% if(how.comment) { %>
-      <p><span><b><%= who %></b> says <%= how.comment %> </span></p>
+      <p><span><b><%= who %></b> says <q><%= how.comment %></q> </span></p>
       <% } else { %>
       <p><span>No comments!!</span></p>
       <% } %>
