tradition and history re-layout

--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
 
 
       <section class="chapter row" id="chapter1">
-      <div class="wrap col-md-offset-1 col-lg-offset-1 col-md-10 col-lg-10
-        col-xs-10 col-sm-10">
+      <div class="wrap  ">
         <h2>Tradition & History</h2>
         <h3></h3>
+        <div class="col-md-4 col-lg-4 col-xs-4 col-sm-4">
         <p> Dasara is derived from Sanskrit, and literally means 10("Dasa")
         days("ahar"). So, this is a celebration of 10 days, and the 10th day is
         Dasara.
@@ -80,13 +80,14 @@
         people evolved into urban lifestyles, the late night offerings and
         pooja became a day event which can still be seen followed
         similarly.</p>
+
         <p>Dasara is celebrated in two parts, the first nine days is one part
         of the festivity, and the 10th day or the day of Victory, is the second
-        and the last part of the celebrations.
+        and the last part of the celebrations.</p>
 
 
 
-        The days of celebration is chosen through the Lunar calendar, Month of
+          <p>  The days of celebration is chosen through the Lunar calendar, Month of
         Ashwayuja(gregorian months of Sep-Oct, from 2nd day of waxing moon till
         the 10th day.
 
@@ -95,8 +96,9 @@
 
         <p>All over India, the feminine Godess Durga and her other forms of
         incarnation like Lakshmi (Godess for economy), Saraswathi (Godess for
-        Wisdom), and so on..</p>
+        Wisdom), and so on..</p></div>
 
+        <div class="col-md-4 col-lg-4 col-xs-4 col-sm-4">
         <p>This tradition of female diety worship is followed since Vedic
         times, Rig Veda suggest that the Hindu's belief in the feminine diety
         was in favour of considering her as the all prevading energy of the
@@ -108,7 +110,8 @@
         found that Devagiri's Yadavas, Hoysalas, Warangal's Kakateeyas
         celebrated Navaratri in accordance to the afore mentioned Vedic
         traditions.</p>
-
+      
+        
         <p>A Bronze statue of mother Durga in form of Mahisasura-mardini
         (lit. The killer of buffalo headed demon) was found from Shimoga
         District in Karnataka and is believed to be from 5th Century. Looking
@@ -116,7 +119,8 @@
         forth this argument that female diety worshipping has been a long lived
         tradition as part of indian culture, and a rough estimate that these
         celebrations have survived time scales of about 2000 years.</p>
-
+        </div>
+        <div class="col-md-4 col-lg-4 col-xs-4 col-sm-4 tradition" >
 
         <p>The tradition and history of royal Dasara can be traced back to the
         Vijayanagara empire [1336 A.D-1646 A.D]. Keen on protecting the Hindu
@@ -137,6 +141,7 @@
         and it's great Men.
 
         </p>
+      </div>
       </div>
 
       </section>
