Adding glyphicon to show action for a user.

--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
         found that Devagiri's Yadavas, Hoysalas, Warangal's Kakateeyas
         celebrated Navaratri in accordance to the afore mentioned Vedic
         traditions.</p>
-      
-        
+
+
         <p>A Bronze statue of mother Durga in form of Mahisasura-mardini
         (lit. The killer of buffalo headed demon) was found from Shimoga
         District in Karnataka and is believed to be from 5th Century. Looking
@@ -457,7 +457,7 @@
 
 <strong>Associate Professor</strong><br />
 
-Dept of Tribal studies, 
+Dept of Tribal studies,
 
 Kannada University, Hampi.<br />
 
@@ -487,6 +487,7 @@ Website:<a href="http://chaha.in/"> Chaluvaraju's Hampi Website</p>
       <p><span>No comments!!</span></p>
       <% } %>
     </div>
+    <div class="info-icon col-md-12"><span class="glyphicon glyphicon-th-list pull-right"></span><div>
     <!-- </div> -->
   </div>
 </script>
