Highlight navigation when a user has scrolled to that chapter.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="css/theme.css">
+    <script type="text/javascript" src="js/waypoints.min.js"></script>
     <script type="text/javascript" src="//underscorejs.org/underscore-min.js"></script>
     <script type="text/javascript" src="//backbonejs.org/backbone-min.js"></script>
     <!-- <link href='http://fonts.googleapis.com/css?family=Titillium+Web:400,300,600,700' rel='stylesheet' type='text/css'> -->
@@ -28,11 +29,11 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class=""><a href="#chapter1">Chapter One</a></li>
-            <li><a href="#chapter2">Chapter Two</a></li>
-            <li><a href="#chapter3">Chapter Three</a></li>
-            <li><a href="#chapter4">Chapter Four</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li for="chapter1"><a href="#chapter1">Chapter One</a></li>
+            <li for="chapter2"><a href="#chapter2">Chapter Two</a></li>
+            <li for="chapter3"><a href="#chapter3">Chapter Three</a></li>
+            <li for="chapter4"><a href="#chapter4">Chapter Four</a></li>
+            <li for="contact"><a href="#contact">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
