--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class=""><a href="#chapter1">Chapter One</a></li>
-            <li><a href="#chapter2">Chapter Two</a></li>
-            <li><a href="#chapter3">Chapter Three</a></li>
-            <li><a href="#chapter4">Chapter Four</a></li>
-            <li><a href="#contact">Contact</a></li>
-            <li class="aboutRestory" ><a href="#about" data-toggle="modal" data-target="#aboutModal" style="margin-top: -9px;" >About</a></li>
+            <li for="chapter1"><a href="#chapter1">Tradition & History</a></li>
+            <li for="chapter2"><a href="#chapter2">Hampi Royal Dasara</a></li>
+            <li for="chapter3"><a href="#chapter3">Mysooru Royal Dasara</a></li>
+            <li for="chapter4"><a href="#chapter4">Hampi Village Dasara</a></li>
+            <li for="contact"><a href="#contact">Contact</a></li>
+            <li for="about" class="aboutRestory" ><a href="#about" data-toggle="modal" data-target="#aboutModal" style="margin-top: -9px;" >About</a></li>
           </ul>
          
         </div><!--/.nav-collapse -->
