light box position set

--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li for="chapter1"><a href="#chapter1">Tradition & History</a></li>
-            <li for="chapter2"><a href="#chapter2">Hampi Royal Dasara</a></li>
-            <li for="chapter3"><a href="#chapter3">Mysooru Royal Dasara</a></li>
-            <li for="chapter4"><a href="#chapter4">Hampi Village Dasara</a></li>
+            <li for="chapter1"><a href="#chapter1" data-toggle="tooltip" title="" data-original-title="Chapter One" >Tradition & History</a></li>
+            <li for="chapter2"><a href="#chapter2" data-toggle="tooltip" title="" data-original-title="Chapter Two" >Hampi Royal Dasara</a></li>
+            <li for="chapter3"><a href="#chapter3" data-toggle="tooltip" title="" data-original-title="Chapter Three" >Mysooru Royal Dasara</a></li>
+            <li for="chapter4"><a href="#chapter4" data-toggle="tooltip" title="" data-original-title="Chapter Four" >Hampi Village Dasara</a></li>
             <li for="contact"><a href="#contact">Contact</a></li>
-            <li for="about" class="aboutRestory" ><a href="#about" data-toggle="modal" data-target="#aboutModal" style="margin-top: -9px;" >About</a></li>
+            <li for="about" class="aboutRestory" data-toggle="tooltip" title="" data-original-title="About Re-story" ><a href="#about" data-toggle="modal" data-target="#aboutModal" style="margin-top: -9px;" >About</a></li>
           </ul>
          
         </div><!--/.nav-collapse -->
