--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#intro">DASARA</a>
+          <a class="navbar-brand" data-toggle="tooltip" title="Introduction" data-placement="bottom"  href="#intro">DASARA</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li for="chapter1"><a href="#chapter1" data-toggle="tooltip" title="" data-original-title="Chapter One" >Tradition & History</a></li>
-            <li for="chapter2"><a href="#chapter2" data-toggle="tooltip" title="" data-original-title="Chapter Two" >Hampi Royal Dasara</a></li>
-            <li for="chapter3"><a href="#chapter3" data-toggle="tooltip" title="" data-original-title="Chapter Three" >Mysooru Royal Dasara</a></li>
-            <li for="chapter4"><a href="#chapter4" data-toggle="tooltip" title="" data-original-title="Chapter Four" >Hampi Village Dasara</a></li>
-            <li for="contact"><a href="#contact">Contact</a></li>
-            <li for="about" class="aboutRestory" data-toggle="tooltip" title="" data-original-title="About Re-story" ><a href="#about" data-toggle="modal" data-target="#aboutModal" style="margin-top: -9px;" >About</a></li>
+            <li for="chapter1"><a href="#chapter1" data-toggle="tooltip" title="Chapter One" data-placement="bottom"  >Tradition & History</a></li>
+            <li for="chapter2"><a href="#chapter2" data-toggle="tooltip" title="Chapter Two" data-placement="bottom" >Hampi Royal Dasara</a></li>
+            <li for="chapter3"><a href="#chapter3" data-toggle="tooltip" title="Chapter Three" data-placement="bottom"  >Mysooru Royal Dasara</a></li>
+            <li for="chapter4"><a href="#chapter4" data-toggle="tooltip" title="Chapter Four" data-placement="bottom"  >Hampi Village Dasara</a></li>
+            <li for="contact"><a data-toggle="tooltip" title="Dr. Chaluvaraju" data-placement="bottom"  href="#contact">Contact</a></li>
+            <li for="about" class="aboutRestory" data-toggle="tooltip" title="About Re-story" data-placement="bottom"  ><a href="#about"   data-toggle="modal" data-target="#aboutModal" style="margin-top: -9px;" >About</a></li>
           </ul>
          
         </div><!--/.nav-collapse -->
@@ -520,7 +520,7 @@ tagged by users. Annotate and explore the inter-connections that
 surface from this story. You will also be able to restory and create
 your own version of the story. </p>
 <p>If this has kindled your imagination, or you have questions on how to create your own restory? and for more...
-contact at vijayanagara@janastu.org
+contact vijayanagara at janastu dot org
  </p>
 	
 </p>
