--- a/index.html
+++ b/index.html
@@ -546,7 +546,9 @@ contact vijayanagara at janastu dot org
 <script type="text/template" id="story-image-template">
   <div class="row">
     <!-- <a href='#' data-toggle="modal" data-target="#lightbox"> -->
-      <img src=<%= where %> data-toggle="modal" data-target="#lightbox" class="story-image img-responsive pull-right" target-id=<%= id %>></img>
+    <div class="fullscreen-icon"><span class="glyphicon glyphicon-fullscreen pull-right"></span></div>
+      <img src=<%= where %> class="story-image img-responsive "  data-toggle="modal" data-target="#lightbox" target-id=<%= id %>></img>
+
     <!-- </a> -->
     <!-- <div class="hidden col-md-3" for=<%= id %>> -->
     <div class="snipit col-md-12 pull-left">
@@ -563,8 +565,8 @@ contact vijayanagara at janastu dot org
 <script type="text/template" id="swt-template">
   <p><span><%= who %> has annotated <a href=<%= where %>>this</a> image.</span></p>
   <p>Tags: <b> <%= how.tags %> </b> </p>
-  <a href=<%= annotate %> >Annotate!</a>
-  <a class="pull-right" href=<%= explore %>>Explore</a>
+  <a class="pull-right" href=<%= annotate %> > / Annotate! </a>   
+  <a class="pull-right" href=<%= explore %>>Explore &nbsp;</a>
 </script>
 <div id="lightbox" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
   <div class="modal-dialog">
