--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
       <section class=" jumbotron row" id="intro">
         <div class=" col-md-8 col-lg-8 col-xs-8 col-sm-8">
           <p class="lead">
-            Festivals and celebrations have an important role in the indian
+            Festivals and celebrations play an important role in the indian
             culture and it's heritage. Most indian festivals have it's roots in
-            religious disciplines incorporating social and cultural heritage.
+            religious disciplines imprinting social and cultural heritage.
 
             Dasara ritual is a forte of the followers of Shakthi tradition, who
-            believe in feminine or godess worship, as a symbol of the good prevailing over evil and
+            believe in feminine or goddesses worship, as a symbol of the good prevailing over evil and
             hence the protection of all life.  All over India, we can see the
             celebration of Dasara in it's variations, proving it to be a
             national festival of unity and showcasing it's evolution in
@@ -72,20 +72,20 @@
         <div class="col-md-4 col-lg-4 col-xs-4 col-sm-4">
         <p> Dasara is derived from Sanskrit, and literally means 10("Dasa")
         days("ahar"). So, this is a celebration of 10 days, and the 10th day is
-        Dasara.
+        Dasara or Vijayadashami.
 
         Other names prevailent for the festival are Dussehra(in northern
         India), Durga Pooja (in Eastern India), Durgotsava, navaratri, and so
         on..</p>
         <p>It seems that during its early inception Dasara was an all night
-        event with offerings to Godessess and other poojas. Hence this festival
+        event with offerings to Goddessess and other poojas. Hence this festival
         was also called as nine("nava") nights("ratri"). As time passed, and
         people evolved into urban lifestyles, the late night offerings and
-        pooja became a day event which can still be seen followed
+        rituals changed to all day event, which can still be seen followed
         similarly.</p>
 
-        <p>Dasara is celebrated in two parts, the first nine days is one part
-        of the festivity, and the 10th day or the day of Victory, is the second
+        <p>Dasara is celebrated in two parts, the first six days is one part
+        of the festivity, and the 7th - 10th day, is the second
         and the last part of the celebrations.</p>
 
 
@@ -94,22 +94,21 @@
         Ashwayuja(gregorian months of Sep-Oct, from 2nd day of waxing moon till
         the 10th day.
 
-        This entire 10 day festivity is commonly called Dasara, than just
-        indicating the 10th day of celebrations.</p>
+        </p>
 
-        <p>All over India, the feminine Godess Durga and her other forms of
-        incarnation like Lakshmi (Godess for economy), Saraswathi (Godess for
+        <p>All over India, the feminine Goddess Durga and her other forms of
+        incarnation like Lakshmi (Goddess of Wealth), Saraswathi (Goddess of
         Wisdom), and so on..</p></div>
 
         <div class="col-md-4 col-lg-4 col-xs-4 col-sm-4">
-        <p>This tradition of female diety worship is followed since Vedic
+        <p>This tradition of female diety worship is followed since and before Vedic
         times, Rig Veda suggest that the Hindu's belief in the feminine diety
         was in favour of considering her as the all prevading energy of the
         universe, and all life and gods as we perceive have come out of this
         Mother, The Mother of all known and knowing.</p>
 
         <p>We can see the mentioning of Dasara and diety worshipping since the
-        times of Ramayana and Mahabharata. Apart from that historians have
+        times of Ramayana and Mahabharata. Apart from that, historians have
         found that Devagiri's Yadavas, Hoysalas, Warangal's Kakateeyas
         celebrated Navaratri in accordance to the afore mentioned Vedic
         traditions.</p>
@@ -133,13 +132,13 @@
         Deva Raya of the Vijayanagara empire, The Navaratri festival started
         receiving royal patronage, and it acquired the status of a state
         festival. It was celebrated with great pomp, enthusiasm and fervor, and
-        attracted visitors from many part of the country and even
+        attracted visitors from many parts of the country and even
         abroad. Political, administrative, religious and social significance
         with the appreciation of the laity added to its grandeur.</p>
 
         <p>The Mysore Kingdom was a small feudatory Kingdom under the
         Vijayanagara Empire. With the fall of Vijayanagara Empire, The Mysore
-        kings, the Wodeyars inherited and perpetuated the traditions of
+        kings, Wodeyars inherited and perpetuated the traditions of
         Vijayanagara Empire thus showing their goodwill to the fallen Empire
         and it's great Men.
 
@@ -156,12 +155,12 @@
         Vijayanagara Dynasty. The historians have detailed about the
         Vijayadashami tradition in this region, and we can see that though
         empires have fallen, but the rituals and traditions haven't died. These
-        human ideas are exquisite human expressions, which has spread across
+        ideas or ideologies are exquisite human expressions, which has spread across
         the society, lived, propogated like a living organism, and still
         evolving in the modern day society.</p></div>
 
       <div class="col-md-12 col-lg-12 col-xs-12 col-sm-12 ">
-        <img src="./img/procession-hampi.gif" style="width:100%;"/>
+        <img src="./img/procession-hampi.png" style="width:100%;"/>
       </div>
 
  <div class="wrap col-md-4 col-lg-4 col-xs-4 col-sm-4">
@@ -174,7 +173,7 @@
           <p>All along the side walls of the Mahanavami Dibba, we can find
             sculptures of wrestlers (Garadi or kushti), hunters, horse traders,
             Camel traders, Gymnasts, other Street acts, jugglers, conjurors and
-            illusionists, dancers, instrumentalists, singers, kings, door
+            illusionists, dancers, instrumentalists, singers, kings, 
             attendants, army chieftains, are speaking of the time begone, and
             great majesty of the Dasara celebrations.</P>
 
@@ -204,8 +203,8 @@
 
             This shows that, all the artists, the royal defence and other
             people involving all hierarchies of the then living society was
-            religiously involved with the celbrations and processions is
-            documented by Foreign travellers travelogues around the world.</p>
+            religiously involved with the celbrations and processions, this is
+            documented by Foreign travellers travelogues, whose details is discussed further.</p>
         <div id="37"></div>
 
           <p>Bharatesha Vaibhava, a great piece of literature from
@@ -232,11 +231,11 @@
 
             Nuniz's description of Common folk's dasara..
 
-            Their writings made references to the ‘great feast’ celebrated for
+            "Their writings made references to the ‘great feast’ celebrated for
             nine days in what is inferred to be Dasara; the wrestling
             competitions, the musicians and dancers entertaining the court, the
             march of the caparisoned elephants, decorated horses, foot soldiers
-            and the tableaux.
+            and the tableaux."
 
 
           </p>
@@ -251,7 +250,7 @@
         <h2>Mysooru Royal Dasara</h2>
         <h3></h3>
         <h3></h3>
-        <p>The divine mother Durga would be worshiped on all these nine days of
+        <p>The divine mother Chamundeshwari would be worshiped on all these nine days of
         Navaratri in her different forms as believed in the Hindu tradition.
         On the first day, the king, after having a ceremonial bath, would
         perform purificatory rites. He would then worship his family deity,
@@ -265,11 +264,7 @@
         <div id="30"></div>
 
         <p> He would then enter the durbar with the accompaniment of sacred
-        chants and music. The tradition of the durbar, an adoption from the
-        Mugal emperors, was first introduced by Mummadi[lit. The Third]
-        Krishnaraja Wadiyar, and it is an assembly of the royal court, attended
-        by the invitees, chief citizens, members of the royal family, palace
-        officials, royal priests, and the intelligentsia.
+        chants and music. 
 
 
 
@@ -293,19 +288,18 @@
         start an ensemble accompanied by dance performance, and the blowing of
         conch es and trumpets with the parade of uniformed soldiers and other
         staff.</p>
+        <p>The tradition of the durbar, an adoption from the
+        Mugal emperors, was first introduced by Mummadi[lit. The Third]
+        Krishnaraja Wadiyar, and it is an assembly of the royal court, attended
+        by the invitees, chief citizens, members of the royal family, palace
+        officials, royal priests, and the intelligentsia.</p>
 
 
 
         <p>The beautifully decorated royal elephant would arrive showering
         roses on the assembled guests; and the royal horse, equally well -
         decorated, would bend down on its knees in salutation to the
-        throne. The assembly would leave the court after bowing down to the
-        king once again and the queen, accompanied by the other royal ladies,
-        would come to pay obeisance to the king who would share the offerings
-        received from the temples with them. The queen mother and the other
-        senior ladies would bless him good health. The king would then leave
-        the durbar hall and partake of the noon meal with the royal guests,
-        after praying to the Goddess once again.</p>
+        throne. </p>
 
 
 
@@ -314,7 +308,7 @@
         fireworks display and other entertainment’s, watched by the teeming
         masses everyday. While the durbar would be held in the outer court the
         worship would be done within the palace. The king would worship Goddess
-        Sarasvati on the seventh day and Mahisasuramardini on the eighth. On
+        Sarasvati on the seventh day and Durga on the eighth. On
         the mahanavami day, the royal sword would be worshiped ceremoniously,
         signifying the worship of all the weapons and would be taken out in
         procession accompanied by the army, elephants, horses, camels and the
@@ -326,34 +320,14 @@
         <div id="31"></div>
         <h3></h3>
 
-        <p>The beautifully decorated royal elephant would arrive showering
-          roses on the assembled guests; and the royal horse, equally well -
-          decorated, would bend down on its knees in salutation to the
-          throne. The assembly would leave the court after bowing down to the
-          king once again and the queen, accompanied by the other royal ladies,
-          would come to pay obeisance to the king who would share the offerings
-          received from the temples with them. The queen mother and the other
-          senior ladies would bless him good health. The king would then leave
-          the durbar hall and partake of the noon meal with the royal guests,
-          after praying to the Goddess once again.</p>
-
-
-
-          <p>The same procedure would be followed on all the Navaratri evenings
-            with the addition of acrobatic feats, wrestling bouts by champions,
-            fireworks display and other entertainment’s, watched by the teeming
-            masses everyday. While the durbar would be held in the outer court
-            the worship would be done within the palace. The king would worship
-            goddess Sarasvati on the seventh day and Mahisasuramardini on the
-            eighth. On the mahanavami day, the royal sword would be worshiped
-            ceremoniously, signifying the worship of all the weapons and would
-            be taken out in procession accompanied by the army, elephants,
-            horses, camels and the royal retinue.
+       <p> After a mile - long walk, the procession would reach the Bannimantap site, 
+	where the king, after a bath, would worship the sami tree(or banni in Kannada).<p> 
+	<p>Worshiping this tree before embarking on any war adventure was customary for kings of this dynasty. 
+	The Wadiyar king would return to his palace after viewing the wonderful torchlight parade and the
+	 grand fireworks display at Bannimantap. </p>
 
             <div id="30"></div>
 
-            The assembly rooms of the palace and the royal insignia would also
-            be worshiped.</p>
 
             <h2> Jambu Savari </h2>
           <p>The Navaratri celebrations would reach their culmination with the
@@ -365,15 +339,15 @@
             smeared with vermilion as sacrifice to it. He would follow the grand
             procession, seated on the historically famous golden howdah bedecked
             with the rarest gems and pearls, which was carried by the royal
-            elephant.
+            elephant.<p>
           <div id="29" ></div>
 
-            The next day, after the goddess Chamundeshvari would be worshiped with
+          <p>  The next day, after the goddess Chamundeshvari would be worshiped with
             great devotion, the king would honor distinguished personalities by
             conferring titles on them. That would mark the close of the grand
-            ten - day - long celebrations during the days of the kings.
+            ten - days long celebrations during the days of the kings.</p>
 
-            The beginning of the traditional Vijayadasami procession, which is
+          <p> The beginning of the traditional Vijayadasami procession, which is
             continued even today with the same - if not more - fervor and
             devotion, would be announced with a 21- round gun salute. The
             important streets of Mysore city would be decorated beautifully
@@ -407,13 +381,13 @@
             part of the celebrations is that the local muslim community also
             participates in the celebrations and rituals with same dedication and
             fervor.These rituals will be held every day of Dasara.</p></div>
-      <section class="col-md-12 col-lg-12 col-sm-12 col-xs-12 ">
+          <section class="col-md-12 col-lg-12 col-sm-12 col-xs-12 ">
 
-<img src="./img/Banni.png" style="width:100%;"/>
+          	<img src="./img/Banni.png" style="width:100%;"/>
 
 
 
-      </section>
+	      </section>
 
  <div class="wrap col-md-4 col-lg-4 col-xs-4 col-sm-4">
         <p>Common people’s Dassara used to start two days prior to Royal
@@ -463,7 +437,7 @@
 <section class="chapter row" id="contact">
   <h2>Contact</h2>
 <hr style="width:400px;"/>
-<p><strong>Dr Chaluvaraju</strong><br />
+<p><strong>Dr. Chaluvaraju</strong><br />
 
 <strong>Associate Professor</strong><br />
 
@@ -473,9 +447,9 @@ Kannada University, Hampi.<br />
 
 Mobile Number: +91 9480353091<br />
 
-Email: chaluvaraju.hampi@gmail.com <br />
+Email: chaluvaraju dot hampi at gmail.com <br />
 
-Website:<a href="http://chaha.in/"> Chaluvaraju's Hampi Website</a></p>
+Website:<a target="_blank" href="http://chaha.in/"> Chaluvaraju's Hampi Website</a></p>
 <hr />
 </section>
 
@@ -565,8 +539,8 @@ contact vijayanagara at janastu dot org
 <script type="text/template" id="swt-template">
   <p><span><%= who %> has annotated <a href=<%= where %>>this</a> image.</span></p>
   <p>Tags: <b> <%= how.tags %> </b> </p>
-  <a class="pull-right" href=<%= annotate %> > / Annotate! </a>   
-  <a class="pull-right" href=<%= explore %>>Explore &nbsp;</a>
+  <a class="pull-right" target="_blank" href=<%= annotate %> > / Annotate! </a>   
+  <a class="pull-right" target="_blank" href=<%= explore %>>Explore &nbsp;</a>
 </script>
 <div id="lightbox" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
   <div class="modal-dialog">
